# quran-text-analytics

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  QuranAnalytics.html  README.md  ROADMAP.md  app.py  app_data.json  build_cinematic.py  enrich_data.py  quran_madani.json  serve.py  serve_nocache.py  surah_extended.json  surah_meta.json  update_all.py  verses_compact.json
.claude/: launch.json
.github/workflows/: deploy-pages.yml
autoresearch/: README.md  eval_heuristic.py  eval_vision.py  git_ops.py  mutate.py  orchestrator.py  pyproject.toml  render.py  rubric.md  search_space.json  smoke_test_app.py
data-build/: .gitignore  README.md  build.py  fetch_sources.sh
data-build/pipeline/: analytics.py  claims.py  corpus.py  datasets.py  montecarlo.py  mushaf.py  optimisation.py
data-build/sources/: surah_meta.json
data-build/tests/: test_counts.py
electron/: main.js  package.json  server.js
electron-app/: app.html  icon.icns  main.js  package-lock.json  package.json  quran_duas.js  quran_lessons.js  quran_tafsir_insights.js  test_charts.html
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
quran_corpus/: README.md
quran_corpus/asbab_nuzul/: asbab_ayat-al-kursi.md  asbab_change-of-qibla.md  asbab_the-pleading-woman.md  asbab_the-slander-of-aisha.md  asbab_the-three-companions.md  asbab_the-three-who-stayed-behind.md  (+9 more)
scripts/: build_arabic_graph.py  build_quran_corpus.py  enrich_quran_corpus.py
tableau/: Quran Tabluea.twb
web/: app.html  corpus.js  data.js  index.html  translation_en.js  words.js
(+218 files in other folders)
