[project]
name = "quran-analytics-autoresearch"
version = "0.1.0"
description = "AutoResearch loop for Plotly chart tuning in the Quran Analytics Electron app"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.45.0",
    "gitpython>=3.1.40",
    "pillow>=10.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"
